<resources>
    <string name="app_name">Med-Manager</string>
    <string name="action_settings">Settings</string>
    <string name="activity_title_home">Meds</string>
    <string name="msg_no_notes">No medications found!</string>
    <string name="msg_no_doctor">No doctor found!</string>
    <string name="lbl_new_note_title">New Drug</string>
    <string name="lbl_new_doc_title">New Doctor</string>
    <string name="lbl_edit_doc_title">Edit Doctor</string>
    <string name="lbl_edit_drug_title">Edit Note</string>
    <string name="hint_enter_note">Name of Drug!</string>
    <string name="hint_enter_name">Name of Doctor!</string>
    <string name="hint_enter_dose">How many pills per take</string>
    <string name="hint_enter_description">Description</string>
    <string name="hint_enter_times">Dosage frequency</string>
    <string name="hint_enter_number">Doctor number</string>
    <string name="lbl_new_drug_title">Drug name</string>
    <string name="lbl_new_doctor_title">Doctor name</string>
    <string name="lbl_new_dose_title">How many times/day</string>
    <string name="lbl_new_phone_title">Phone Number</string>
    <string name="lbl_new_dose_description">Description</string>
    <string name="lbl_new_dose_dose">Dose</string>
    <string name="lbl_new_dose_start">Start Date</string>
    <string name="lbl_new_dose_end">End Date</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="logout">LOGOUT GOOGLE ACCOUNT</string>
    <string name="intro_1_header">Welcome to Med-Manager</string>
    <string name="intro_2_header">Medication Reminder</string>
    <string name="intro_3_header">Doctor\'s Appointment</string>
    <string name="home">Home</string>
    <string name="section1">Reminders</string>
    <string name="section2">Medications</string>
    <string name="about_app">THIS IS A DEMO APP THAT REMINDS PATIENTS TO TAKE THEIR MEDDICATIONS AND NOT MISS AN APPOINTMENT WITH THE DOCTOR.\n FOUND ON MY GITHUB REPO @5ran6/Med-Manager</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="ok">Okay</string>
    <string name="or">OR</string>
    <string name="tips">How it works</string>
    <string name="instruction">How it works</string>
    <string name="meds">Medication</string>
    <string name="doc_app">Doctor\'s Appointment</string>
    <string name="list_meds">List of Meds</string>
    <string name="doc">Doctor Info</string>
    <string name="profile">Profile</string>
    <string name="section3">Others</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="shared_pref">MED</string>
    <string name="search_item">Search</string>
    <string name="remove_item">Remove</string>
    <string name="app_intro_skip">Welcome</string>
    <string name="intro_text_1">An awesome android app the helps you manage your meds intake and improves your health</string>
    <string name="intro_text_2">Reminds you to take your medication</string>
    <string name="intro_text_3">Never miss an appointment with the Doctor</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="signIn_existing">CHOOSE ACCOUNT TO SIGN IN</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_licenses">Licenses</string>
    <string name="add_reminder">Drug: Description</string>
    <string name="add_location_reminder">Location: Description</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>
    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>
    <string name="no_reminders">Click on the plus button below to begin creating your reminders!</string>
</resources>