<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_black_24dp"
        android:orderInCategory="0"
        android:title="@string/home" />
    <item android:title="@string/section1">
        <menu>
            <item
                android:id="@+id/med"
                android:icon="@drawable/ic_local_hospital_black_24dp"
                android:orderInCategory="1"
                android:title="@string/meds" />

        </menu>
    </item>
    <item android:title="@string/section2">
        <menu>
            <item
                android:id="@+id/meds"
                android:icon="@drawable/ic_playlist_add_black_24dp"
                android:orderInCategory="1"
                android:title="@string/list_meds" />
            <item
                android:id="@+id/doc"
                android:icon="@drawable/ic_person_black_24dp"
                android:orderInCategory="2"
                android:title="@string/doc" />
        </menu>
    </item>
    <item android:title="@string/section3">
        <menu>
            <item
                android:id="@+id/profile"
                android:icon="@drawable/ic_perm_identity_black_24dp"
                android:orderInCategory="1"
                android:title="@string/profile" />
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:orderInCategory="2"
                android:title="@string/about" />

            <item
                android:id="@+id/exit"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:orderInCategory="3"
                android:title="@string/exit" />
        </menu>
    </item>
</menu>