<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Blue"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_10"
            android:fontFamily="sans-serif-medium"
            android:lineSpacingExtra="8sp"
            android:text="@string/lbl_new_note_title"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/lbl_new_note_title"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_10"
            android:fontFamily="sans-serif-medium"
            android:lineSpacingExtra="8sp"
            android:text="@string/lbl_new_drug_title"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/lbl_new_note_title1"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:hint="@string/hint_enter_note"
            android:inputType="textCapSentences|textMultiLine"
            android:lines="2"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/hint_enter_note"
            android:textSize="@dimen/input_new_note" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_10"
            android:fontFamily="sans-serif-medium"
            android:lineSpacingExtra="8sp"
            android:text="@string/lbl_new_dose_title"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/lbl_new_note_title1"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/frequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:hint="@string/hint_enter_times"
            android:inputType="number"
            android:lines="1"
            android:maxLength="2"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/hint_enter_note"
            android:textSize="@dimen/input_new_note" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_10"
            android:fontFamily="sans-serif-medium"
            android:lineSpacingExtra="8sp"
            android:text="@string/lbl_new_dose_dose"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/lbl_new_note_title1"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/dose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:hint="@string/hint_enter_dose"
            android:inputType="number"
            android:lines="1"
            android:maxLength="2"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/hint_enter_note"
            android:textSize="@dimen/input_new_note" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_10"
            android:fontFamily="sans-serif-medium"
            android:lineSpacingExtra="8sp"
            android:text="@string/lbl_new_dose_description"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/lbl_new_note_title1"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:hint="@string/hint_enter_description"
            android:inputType="textAutoComplete"
            android:lines="3"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/hint_enter_note"
            android:textSize="@dimen/input_new_note" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_10"
            android:fontFamily="sans-serif-medium"
            android:lineSpacingExtra="8sp"
            android:text="@string/lbl_new_dose_start"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/lbl_new_note_title1"
            android:textStyle="normal" />

        <DatePicker
            android:id="@+id/start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="calendar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_10"
            android:fontFamily="sans-serif-medium"
            android:lineSpacingExtra="8sp"
            android:text="@string/lbl_new_dose_end"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/lbl_new_note_title1"
            android:textStyle="normal" />

        <DatePicker
            android:id="@+id/end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="calendar" />

    </LinearLayout>
</ScrollView>