<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LHint"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="top|right"
    android:alpha="0"
    android:clickable="true"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:text="@string/tips"
        android:textColor="#1804f7"
        android:textSize="29sp" />

    <TextView
        android:id="@+id/TVFirstTimeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruction"
        android:textColor="@color/Red" />

    <Button
        android:id="@+id/BHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="0dp"
        android:background="#333333"
        android:paddingBottom="12dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="12dp"
        android:text="@string/ok"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="22sp" />

</LinearLayout>